Fix .half spacing

--- a/_local.scss
+++ b/_local.scss
@@ -138,7 +138,7 @@ nav.toc {
 // Replicates _base.scss l.235
 .half img {
     @include breakpoint($small) {
-        max-width: calc(50% - 0.5em);
+        max-width: calc(50% - 1em);
     }
 }
 
